--- a/data cleaning.ipynb
+++ b/data cleaning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,16 +181,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "compare.to_csv('compare2.csv',index=False)"
+    "# compare.to_csv('compare2.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        "[401604 rows x 8 columns]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -563,7 +563,7 @@
        "[3684 rows x 2 columns]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,17 +579,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "filtered_df = compare[compare['Description'].isin(df.groupby('Description').filter(lambda x: x['StockCode'].nunique() > 1)['Description'])]\n",
-    "filtered_df.to_csv('filter.csv',index=False)"
+    "# filtered_df.to_csv('filter.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -650,6 +650,46 @@
     "    print(f\"{i+1}. {data[col].nunique()} unique values in column {col}:\")\n",
     "    print(data[col].unique())\n",
     "    print(\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 401604 entries, 0 to 541908\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column       Non-Null Count   Dtype  \n",
+      "---  ------       --------------   -----  \n",
+      " 0   InvoiceNo    401604 non-null  object \n",
+      " 1   StockCode    401604 non-null  object \n",
+      " 2   Description  401604 non-null  object \n",
+      " 3   Quantity     401604 non-null  int64  \n",
+      " 4   InvoiceDate  401604 non-null  object \n",
+      " 5   UnitPrice    401604 non-null  float64\n",
+      " 6   CustomerID   401604 non-null  float64\n",
+      " 7   Country      401604 non-null  object \n",
+      "dtypes: float64(2), int64(1), object(5)\n",
+      "memory usage: 27.6+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data.to_csv('data_cleaned.csv', index=False)"
    ]
   }
  ],
